# pytest-leak-finder

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest_leak_finder.py  setup.py
.github/workflows/: cd.yml  ci.yml  pytest.yml
demo/: test_demo.py  test_demo2.py
docs/: conf.py  index.rst
tests/: test_demo.py  test_leak_finder.py
